--- a/transport_management_system/Dockerfile
+++ b/transport_management_system/Dockerfile
@@ -1,10 +1,7 @@
-FROM odoo:16.0
+FROM odoo:15.0
 
-# Cria diretório para módulos customizados
 USER root
 RUN mkdir -p /mnt/extra-addons && chown -R odoo:odoo /mnt/extra-addons
-
-# Copia seus módulos customizados para dentro do container
-COPY ./addons /mnt/extra-addons
-
+COPY ./transport_management_system /mnt/extra-addons/transport_management_system
 USER odoo
+
