Configurar Postgres no odoo.conf

--- a/odoo.conf
+++ b/odoo.conf
@@ -6,11 +6,11 @@ addons_path = /usr/lib/python3/dist-packages/odoo/addons
 addons_path = /mnt/extra-addons
 
 ; Configurações do banco de dados
-db_host = <HOSTNAME_DO_RENDER>
+db_host = dpg-d3f5mkili9vc73e1kjj0-a
 db_port = 5432
-db_user = <USERNAME_DO_RENDER>
-db_password = <PASSWORD_DO_RENDER>
-db_name = <DATABASE_NAME_DO_RENDER>
+db_user = odoo15_db_wgbg_user
+db_password = nJdEgXAuXyvC1WQVHDHj6sXhe0FTcYb4
+db_name = odoo15_db_wgbg
 
 ; Outras configs
 admin_passwd = admin
