Corrigir addons_path e hostname

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,12 +1,9 @@
 [options]
-; Caminho onde ficam os addons oficiais
-addons_path = /usr/lib/python3/dist-packages/odoo/addons
+; Addons oficiais + customizados
+addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 
-; Caminho onde ficam os teus módulos customizados
-addons_path = /mnt/extra-addons
-
-; Configurações do banco de dados
-db_host = dpg-d3f5mkili9vc73e1kjj0-a
+; Configurações do banco de dados (Render → Postgres Info)
+db_host = dpg-d3f5mkili9vc73e1kjj0-a.oregon-postgres.render.com
 db_port = 5432
 db_user = odoo15_db_wgbg_user
 db_password = nJdEgXAuXyvC1WQVHDHj6sXhe0FTcYb4
