remove db_name to allow db manager

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,15 +1,11 @@
 [options]
-; Addons oficiais + customizados
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 
-; Configurações do banco de dados (Render → Postgres Info)
-db_host = dpg-d3f5mkili9vc73e1kjj0-a.oregon-postgres.render.com
+db_host = dpg-d3f5mkili9vc73e1kjj0-a
 db_port = 5432
 db_user = odoo15_db_wgbg_user
 db_password = nJdEgXAuXyvC1WQVHDHj6sXhe0FTcYb4
-db_name = odoo15_db_wgbg
 
-; Outras configs
 admin_passwd = admin
 logfile = /var/log/odoo/odoo.log
 
